INCLUDE(FetchContent)

FETCHCONTENT_DECLARE(
  Catch2
  GIT_REPOSITORY
    https://github.com/catchorg/Catch2.git
  GIT_TAG
    v3.7.1
)
FETCHCONTENT_MAKEAVAILABLE(Catch2)

FILE(GLOB TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FOREACH(TEST_FILENAME ${TEST_SOURCES})
  GET_FILENAME_COMPONENT(TEST_NAME ${TEST_FILENAME} NAME_WE)
  ADD_EXECUTABLE(${TEST_NAME} ${TEST_FILENAME})

  TARGET_INCLUDE_DIRECTORIES(
    ${TEST_NAME}
    PUBLIC
      ${CMAKE_CURRENT_SOURCE_DIR}/../include
  )

  TARGET_COMPILE_FEATURES(
    ${TEST_NAME}
    PUBLIC
      cxx_std_11
  )

  IF(MSVC)
    TARGET_COMPILE_OPTIONS(
      ${TEST_NAME}
      PRIVATE
        /W4 /WX
    )
  ELSE()
    TARGET_COMPILE_OPTIONS(
      ${TEST_NAME}
      PRIVATE
        -Wall -Werror
    )
  ENDIF()

  TARGET_LINK_LIBRARIES(
    ${TEST_NAME}
    Catch2::Catch2WithMain
    PeeloResult
  )

  ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
ENDFOREACH()
